<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_marketplace"
            android:icon="@drawable/ic_menu_marketplace"
            android:title="@string/menu_marketplace" />
        <item
            android:id="@+id/nav_farm_map"
            android:icon="@drawable/ic_menu_farm_map"
            android:title="@string/menu_farm_map" />
        <item
            android:id="@+id/nav_deals"
            android:icon="@drawable/ic_menu_deals"
            android:title="@string/menu_deals" />
        <item
            android:id="@+id/nav_my_farm"
            android:icon="@drawable/ic_baseline_agriculture_24"
            android:title="@string/menu_my_farm" />
    </group>
</menu>