<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp">

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/filterCategories"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/categoriesTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/filterCategoriesTitle"
            android:textColor="#000000" />

        <com.google.android.material.chip.Chip
            android:id="@+id/filterFarmByproducts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/filterFarmByproducts"
            app:chipEndPadding="0dp"
            app:chipStartPadding="0dp"
            app:closeIconEndPadding="0dp"
            app:closeIconStartPadding="0dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/filterFarmDisposables"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/filterFarmDisposables"
            app:chipEndPadding="0dp"
            app:chipStartPadding="0dp"
            app:closeIconEndPadding="0dp"
            app:closeIconStartPadding="0dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/filterFarmProducts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/filterFarmProducts"
            app:chipEndPadding="0dp"
            app:chipStartPadding="0dp"
            app:closeIconEndPadding="0dp"
            app:closeIconStartPadding="0dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/filterFarmFertilizersAndChemicals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/filterFertilizersAndChemicals"
            app:chipEndPadding="0dp"
            app:chipStartPadding="0dp"
            app:closeIconEndPadding="0dp"
            app:closeIconStartPadding="0dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/filterFieldRental"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/filterFieldRental"
            app:chipEndPadding="0dp"
            app:chipStartPadding="0dp"
            app:closeIconEndPadding="0dp"
            app:closeIconStartPadding="0dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/filterMachineRental"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/filterMachineRental"
            app:chipEndPadding="0dp"
            app:chipStartPadding="0dp"
            app:closeIconEndPadding="0dp"
            app:closeIconStartPadding="0dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/filterSeeds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/filterSeeds"
            app:chipEndPadding="0dp"
            app:chipStartPadding="0dp"
            app:closeIconEndPadding="0dp"
            app:closeIconStartPadding="0dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/filterWorkforceRental"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/filterWorkforceRental"
            app:chipEndPadding="0dp"
            app:chipStartPadding="0dp"
            app:closeIconEndPadding="0dp"
            app:closeIconStartPadding="0dp" />

    </com.google.android.material.chip.ChipGroup>
</androidx.constraintlayout.widget.ConstraintLayout>