<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/machineRentalContentMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.seedListingDetails.SeedListingDetailsFragment">

    <LinearLayout
        android:id="@+id/machineRentalEquipmentInformation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/seedProductInformationTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/productInformationTitle"
            android:textColor="#000000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/seedOrigin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exampleText" />

        <TextView
            android:id="@+id/seedGrowingTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exampleText" />

        <TextView
            android:id="@+id/seedMill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exampleText" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:id="@+id/seedTechnicalInformation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/seedTechnicalInformationTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/technicalInformationTitle"
            android:textColor="#000000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/seedDiseaseResistance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exampleText" />

        <TextView
            android:id="@+id/seedCultivationInstructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exampleText" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

</LinearLayout>