<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/machineRentalContentMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fertilizerListingDetails.FertilizerListingDetailsFragment">

    <LinearLayout
        android:id="@+id/machineRentalEquipmentInformation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/fertilizerProductInformationTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/productInformationTitle"
            android:textColor="#000000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/fertilizerOrigin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exampleText" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:id="@+id/fertilizerTechnicalInformation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/fertilizerTechnicalInformationTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/technicalInformationTitle"
            android:textColor="#000000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/fertilizerTotalPhosphorus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exampleText" />

        <TextView
            android:id="@+id/fertilizerPotassium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exampleText" />

        <TextView
            android:id="@+id/fertilizerCalcium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exampleText" />

        <TextView
            android:id="@+id/fertilizerMagnesium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exampleText" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

</LinearLayout>